--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:sqlserver://serverappdop.database.windows.net:1433;database=databasedogapp;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username=appdog@serverappdop
-spring.datasource.password=pass@123
+spring.datasource.url=jdbc:sqlserver://sqlservidor1234.database.windows.net:1433;database=appdog;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=usuarioAzure@sqlservidor1234
+spring.datasource.password=FISI2022#
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
